separa a responsabilidade de editar e criar um novo recurso.

--- a/example/index.html
+++ b/example/index.html
@@ -32,7 +32,7 @@
 
 		<div> <!-- col 2-->
 
-			<button id="openModalBtn">Open Modal</button>
+			<button id="addRecursoBtn">Novo Recurso</button>
 
 			<div id="myModal" class="modal">
 				<div class="modal-content">
@@ -41,7 +41,7 @@
 					<div id="ganttChartFormContainer">
 						<form id="ganttChartForm">
 							<label for="id">id</label>
-							<input type="number" name="id">
+							<input type="number" name="id" readonly disabled>
 
 							<label for="recurso">Recurso</label>
 							<input type="text" name="recurso">
